tests/conformance/negative/bad_index_text.afr
create xs = list of 1, 2
create v = xs at "nope"
